[gd_scene load_steps=2 format=2]

[ext_resource path="res://Trivia.gd" type="Script" id=1]

[node name="Trivia" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 1024.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -55.0
margin_bottom = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="Label" parent="VBoxContainer/Control/VBoxContainer2"]
margin_right = 1024.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="Choices" type="VBoxContainer" parent="VBoxContainer/Control/VBoxContainer2"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 86.0

[node name="Answer1" type="Label" parent="VBoxContainer/Control/VBoxContainer2/Choices"]
margin_right = 1024.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="Answer2" type="Label" parent="VBoxContainer/Control/VBoxContainer2/Choices"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="Answer3" type="Label" parent="VBoxContainer/Control/VBoxContainer2/Choices"]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="Answer4" type="Label" parent="VBoxContainer/Control/VBoxContainer2/Choices"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
